--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.svillanueva</groupId>
-    <artifactId>webapp-cookie-tarea4</artifactId>
+    <artifactId>webapp-tareas</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
