--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet-shaded</artifactId>
+            <version>4.0.2.Final</version>
+        </dependency>
     </dependencies>
 </project>
