--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>weld-servlet-core</artifactId>
             <version>6.0.0.Alpha1</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -33,7 +38,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/${project.artifactId}</path>
+                    <path>/${project.artifactId}-15</path>
                     <url>http://localhost:8080/manager/text</url>
                     <username>admin</username>
                     <password>1234</password>
@@ -41,5 +46,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
