--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
             <version>10.0.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet-core</artifactId>
-            <version>6.0.0.Alpha1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jboss.weld.servlet</groupId>-->
+<!--            <artifactId>weld-servlet-core</artifactId>-->
+<!--            <version>6.0.0.Alpha1</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
@@ -32,6 +32,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>${project.artifactId}-15</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
