--- a/pom.xml
+++ b/pom.xml
@@ -25,21 +25,21 @@
 <!--            <artifactId>weld-servlet-core</artifactId>-->
 <!--            <version>6.0.0.Alpha1</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>3.0.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish.web</groupId>-->
+<!--            <artifactId>jakarta.servlet.jsp.jstl</artifactId>-->
+<!--            <version>3.0.1</version>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
-        <finalName>${project.artifactId}-15</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/${project.artifactId}-15</path>
+                    <path>/${project.artifactId}</path>
                     <url>http://localhost:8080/manager/text</url>
                     <username>admin</username>
                     <password>1234</password>
