--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.svillanueva</groupId>
-    <artifactId>webapp-tareas</artifactId>
+    <artifactId>webapp-tareas-curso</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>war</packaging>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -41,4 +41,20 @@
             <version>4.0.2.Final</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/${project.artifactId}-curso</path>
+                    <username>admin</username>
+                    <password>1234</password>
+                    <url>http://localhost:8080/manager/text</url>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
